--- a/style.css
+++ b/style.css
@@ -1,32 +1,65 @@
 header {
-	padding: ;
+	display: block;
+	padding: 7px 10px 10px 10px;
 }
 
 .boton1 { 
- text-align: center; 
- padding: 7px;
+    text-align: center;
  }
 
  button {
- 	 background-color: #6E9BF0;
- 	 color: black;
+    background-color: rgb(0 123 255);
+ 	color: white;
+ 	border-style: none;
+ 	padding: 9px;
+ 	border-radius: 5px;
+ 	margin: 20px 0px 0px;
  }
 
 .container {
-	border: black 1px solid;
-	margin: 50px 190px;
+	border: 1px solid rgb(241 243 243);
+    border-radius: 5px;
+    margin: 30px 190px 0px 190px;
+	font-family: arial;
 }
 
 .fecha  {
 	background-color: #DFE3E9;
+	padding: 6px 6px 7px 6px;
 }
 
 #fecha {
-	padding-right: 80%;
+    padding-right: 87%;
+    margin: 5px 5px;
 }
 
 .columna {
 	display: inline-block;
-	width: 38%;
+	width: 48%;
 	padding-left: 10px;
+	padding: 10px;
+
+}
+
+.barra {
+	width: 98%;
+}
+
+.barra2 {
+	padding: 2px;
+}
+
+.seleccion {
+	padding: 5px;
+	padding: 10px;
+}
+
+#otro {
+	width: 99%;
+	padding-right: 
+
+}
+
+#direccion {
+	width: 203%;
 }
